--- a/checkpoints/config.yml
+++ b/checkpoints/config.yml
@@ -25,7 +25,7 @@ D2G_LR: 0.1                   # discriminator/generator learning rate ratio
 BETA1: 0.0                    # adam optimizer beta1
 BETA2: 0.9                    # adam optimizer beta2
 BATCH_SIZE: 2 #8              # input batch size for training
-INPUT_SIZE: 256               # input image size for training 0 for original size
+INPUT_SIZE: 256               # input image size for training 0 for original size (must 2^n )
 SIGMA: 2                      # standard deviation of the Gaussian filter used in Canny edge detector (0: random, -1: no edge)
 MAX_ITERS: 2e6                # maximum number of iterations to train the model
 
