--- a/checkpoints/config.yml
+++ b/checkpoints/config.yml
@@ -8,6 +8,7 @@ GPU: [0]            # list of gpu ids
 DEBUG: 0            # turns on debugging mode
 VERBOSE: 0          # turns on verbose mode in the output console
 
+# 最好为n^2 的不带alpha的RGB图片
 TRAIN_FLIST: ./datasets/places2_train.flist
 VAL_FLIST: ./datasets/places2_val.flist
 TEST_FLIST: ./datasets/places2_test.flist
@@ -16,6 +17,7 @@ TRAIN_EDGE_FLIST: ./datasets/places2_edges_train.flist
 VAL_EDGE_FLIST: ./datasets/places2_edges_val.flist
 TEST_EDGE_FLIST: ./datasets/places2_edges_test.flist
 
+# 必须位图 类型为 Pil的 ‘1’
 TRAIN_MASK_FLIST: ./datasets/masks_train.flist
 VAL_MASK_FLIST: ./datasets/masks_val.flist
 TEST_MASK_FLIST: ./datasets/masks_test.flist
