--- a/checkpoints/config.yml
+++ b/checkpoints/config.yml
@@ -8,17 +8,17 @@ GPU: [0]            # list of gpu ids
 DEBUG: 0            # turns on debugging mode
 VERBOSE: 0          # turns on verbose mode in the output console
 
-TRAIN_FLIST: ./datasets/places2_train.flist
-VAL_FLIST: ./datasets/places2_val.flist
-TEST_FLIST: ./datasets/places2_test.flist
+TRAIN_FLIST: places2_train.flist
+VAL_FLIST: places2_val.flist
+TEST_FLIST: places2_test.flist
 
-TRAIN_EDGE_FLIST: ./datasets/places2_edges_train.flist
-VAL_EDGE_FLIST: ./datasets/places2_edges_val.flist
-TEST_EDGE_FLIST: ./datasets/places2_edges_test.flist
+TRAIN_EDGE_FLIST: places2_edges_train.flist
+VAL_EDGE_FLIST: places2_edges_val.flist
+TEST_EDGE_FLIST: places2_edges_test.flist
 
-TRAIN_MASK_FLIST: ./datasets/masks_train.flist
-VAL_MASK_FLIST: ./datasets/masks_val.flist
-TEST_MASK_FLIST: ./datasets/masks_test.flist
+TRAIN_MASK_FLIST: masks_train.flist
+VAL_MASK_FLIST: masks_val.flist
+TEST_MASK_FLIST: masks_test.flist
 
 LR: 0.0001                    # learning rate 1:0.0001 2:0.00001 3:0.000001
 D2G_LR: 0.1                   # discriminator/generator learning rate ratio
